--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,39 @@ a:hover {
     opacity: 1.0;
 }
 
+.gallery {
+  background: #EEE;
+}
+
+
+
+.gallery-cell {
+  width: 20%;
+  height: 250px;
+  margin-right: 10px;
+  background: #b0ccbd ;
+  counter-increment: gallery-cell;
+  opacity: .3;
+
+}
+
+.gallery-cell.is-selected {
+  background: black;
+  opacity: 1;
+
+}
+
+
+/* cell number */
+.gallery-cell:before {
+  display: block;
+  text-align: center;
+  content: counter(gallery-cell);
+  line-height: 200px;
+  font-size: 80px;
+  color: white;
+}
+
 .intro-button {
     background: none;
     border: 2px solid #ffffff;
@@ -248,6 +281,7 @@ a:hover {
 .w-max-100pct {max-width: 100%;}
 
 .z-index {z-index: 1;}
+
 
 
 @media (max-width: 768px) {
