--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,8 +16,8 @@ maroon: #8b4d4e;
 	border-width: 1px;
 	border-style: solid;
 	border-color: #8B4D4E;
-  height: 35px;
-  color: white;
+	height: 35px;
+	color: white;
 }
 
 .caption { 
@@ -56,7 +56,7 @@ maroon: #8b4d4e;
 	height: 100vh;
 	background: url(../images/flower-background.jpg) top center fixed;
 	background-size: cover;
-	padding: 0;
+	padding: 0 !important;
 	margin: 0;
 }
 
@@ -239,6 +239,8 @@ maroon: #8b4d4e;
 .pad-20 {padding: 20px;}
 .pad-30 {padding: 30px;}
 .pad-60 {padding: 60px;}
+.pad-20-0-5-0 {padding: 20px 0 5px 0;}
+.pad-40-0-5-0 {padding: 40px 0 5px 0;}
 .pad-30-60 {padding: 30px 60px;}
 .pad-8-20 {padding: 8px 20px;}
 .pad-10-20 {padding: 10px 20px;}
@@ -283,35 +285,29 @@ maroon: #8b4d4e;
 
 
 
+/***** GALLERY STYLES *****/
+
+@import url(http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css);
 
 
-
-  @import url(http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css);
-
-
-.col-item
-{
+.col-item {
     border: 1px solid #E1E1E1;
     border-radius: 5px;
     background: #FFF;
 }
-.col-item .photo img
-{
+.col-item .photo img {
     margin: 0 auto;
     width: 350px;
     height: 350px;
 }
 
-
-.col-item .photoEbay img
-{
+.col-item .photoEbay img {
     margin: 0 auto;
     width: 350px;
     height: 350px;
 }
 
-.col-item .info
-{
+.col-item .info {
     padding: 10px;
     border-radius: 0 0 5px 5px;
     margin-top: 1px;
@@ -320,15 +316,14 @@ maroon: #8b4d4e;
 .col-item:hover .info {
     background-color: #f9f9f9;
 }
-.col-item .price
-{
+
+.col-item .price {
     /*width: 50%;*/
     float: left;
     margin-top: 5px;
 }
 
-.col-item .price h5
-{
+.col-item .price h5 {
     line-height: 20px;
     margin: 0;
 }
@@ -337,59 +332,49 @@ maroon: #8b4d4e;
   text-align: center;
  }
 
-.price-text-color
-{
+.price-text-color {
     color: #219FD1;
 }
 
-.col-item .info .rating
-{
+.col-item .info .rating {
     color: #777;
 }
 
-.col-item .separator
-{
+.col-item .separator {
     border-top: 1px solid #E1E1E1;
 }
 
-.clear-left
-{
+.clear-left {
     clear: left;
 }
 
-.col-item .separator p
-{
+.col-item .separator p {
     line-height: 20px;
     margin-bottom: 0;
     margin-top: 10px;
     text-align: center;
 }
 
-.col-item .separator p i
-{
+.col-item .separator p i {
     margin-right: 5px;
 }
-.col-item .btn-add
-{
+
+.col-item .btn-add {
     width: 50%;
     float: left;
 }
 
-.col-item .btn-add
-{
+.col-item .btn-add {
     border-right: 1px solid #E1E1E1;
 }
 
-.controls
-{
+.controls {
     margin-top: 20px;
     text-align: center;
     margin-bottom: 20px;
-
 }
 
-[data-slide="prev"]
-{
+[data-slide="prev"] {
     margin-right: 10px;
 }
 
@@ -406,14 +391,22 @@ a.details {
  }
 
 a:hover.btn { 
-  color: #8B4D4E;
-
+    color: #ffffff;
+    background-color: #a95e5f;
  }
 
 .detailButton {
   color: #8B4D4E;
   text-align: center;
   align-content: center;
-
 }
 
+.btn-circle {
+  width: 49px;
+  height: 49px;
+  text-align: center;
+  padding: 5px 0;
+  font-size: 20px;
+  line-height: 2.00;
+  border-radius: 30px;
+}
