--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,6 +220,7 @@ maroon: #8b4d4e;
 .marg-0-10 {margin: 0 10px;}
 .marg-20-5 {margin: 20px 5px;}
 .marg-5-0 {margin: 5px 0;}
+.marg-5-0-0-5 {margin: 5px 0 0 5px;}
 .marg-10-0 {margin: 10px 0;}
 .marg-10 {margin: 10px;}
 .marg-20 {margin: 20px;}
@@ -227,7 +228,9 @@ maroon: #8b4d4e;
 .marg-60 {margin: 60px;}
 .marg-b-15 {margin-bottom: 15px;}
 .marg-b-40 {margin-bottom: 40px;}
-.marg-t-20 {margin-top: 35px;}
+.marg-l-15 {margin-left: 15px;}
+.marg-t-5 {margin-top: 5px;}
+.marg-t-47 {margin-top: 47px;}
 
 .opacity {opacity: 0.7;}
 .opacity-none {opacity: 1;}
@@ -261,6 +264,7 @@ maroon: #8b4d4e;
 .w-30pct {width: 30%;}
 .w-100pct {width: 100%;}
 .w-max-100pct {max-width: 100%;}
+.w-22 {width: 22px;}
 .w-70 {width: 170px;}
 
 .z-index {z-index: 1;}
