--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,11 +26,19 @@ maroon: #8b4d4e;
   font-size: 20px;
  }
 
-
 .category:hover {
     opacity: 1.0;
 }
 
+.email{
+    text-decoration: none;
+    color: #dad3cc;
+}
+
+.email:hover {
+    text-decoration: none;
+    color: #ffffff;
+}
 
 .intro-button {
     background: none;
@@ -171,6 +179,7 @@ maroon: #8b4d4e;
 .bord-none {border: none;}
 .bord-2-solid-white {border: 2px solid #ffffff;}
 .bord-4-solid-white {border: 4px solid #ffffff;}
+.bord-b-2-solid-tan {border-bottom: 2px solid #dad3cc;}
 .bord-4-solid-maroon {border: 4px solid #8b4d4e;}
 .bord-rad-0 {border-radius: 0;}
 .bord-rad-2 {border-radius: 2px;}
@@ -249,6 +258,7 @@ maroon: #8b4d4e;
 .pad-10-20 {padding: 10px 20px;}
 .pad-20-0 {padding: 20px 0;}
 .pad-t-40pct {padding-top: 40%;}
+.pad-b-25 {padding-bottom: 25px;}
 
 .pos-abs {position: absolute;}
 .pos-rel {position: relative;}
@@ -257,6 +267,7 @@ maroon: #8b4d4e;
 
 .txt-algn-cntr {text-align: center;}
 .txt-algn-r {text-align: right;}
+.txt-dec-none {text-decoration: none;}
 
 .vert-algn-cntr {vertical-align: middle;}
 
@@ -320,7 +331,6 @@ maroon: #8b4d4e;
     text-align: center;
 }
 
-
 .price { 
   text-align: center;
  }
@@ -368,7 +378,6 @@ maroon: #8b4d4e;
     margin-bottom: 20px;
 }
 
-
 [data-slide="prev"] {
     margin-right: 10px;
 }
@@ -391,7 +400,6 @@ a:hover.btn {
  }
 
 .detailButton {
-  color: #8B4D4E;
   text-align: center;
   align-content: center;
 }
