adding images to imageless api items, remove that stupid ass background-gifts-blue.jpg bug, added placeholer images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,7 +162,7 @@ maroon: #8b4d4e;
 
 
 .bkgd-quest {background: url(../images/questionnaire-background.jpg) top center fixed;}
-.bkgd-img {background: url(../images/blue-gifts-background.jpg) top center fixed;}
+/*.bkgd-img {background: url(../images/blue-gifts-background.jpg) top center fixed;}*/
 .bkgd-pattern {background: url(../images/pattern.jpg);}
 
 .bkgd-brown {background-color: #847b74;}
